--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,3 +12,22 @@ form {
 button {
     margin-top: 10px;
 }
+
+/* 
+ * Always set the map height explicitly to define the size of the div element
+ * that contains the map. 
+ */
+ #map {
+    height: 40%;
+  }
+  
+  /* 
+   * Optional: Makes the sample page fill the window. 
+   */
+  html,
+  body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  
