added card layout

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,3 +12,12 @@ form {
 button {
     margin-top: 10px;
 }
+
+#content {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.film-section {
+    padding: 1rem
+}
