--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,65 @@
+body, html {
+    height: 100%;
+  }
+/* homepage styles */
+.homepage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 100%;
+    background-image: url("https://res.cloudinary.com/dcm18vy74/image/upload/v1652559610/Project1-Images/Stocksy_txpcd1dc0eemKP100_Medium_1292869_jxi1ai.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+}
+
+.homepage-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.homepage-header {
+    display: flex;
+    justify-content: center;
+    font-size: 4em;
+    color: white;
+}
+
+.homepage-button {
+    margin-top: 10px;
+    display: inline-block;
+    background-color: rgb(94, 7, 40);
+    color: white;
+    border-color: rgb(37, 2, 16);
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 50%;
+  
+}
+
+
+button:hover {
+   background-color: rgb(100, 48, 68);  
+}
+
+
 header {
-    text-align: center;
+    display: flex;
+    align-content: flex-end;
+    height: 300px;
+    background-image: url("https://res.cloudinary.com/dcm18vy74/image/upload/v1652559609/Project1-Images/GettyImages_1032865588_c3pry7.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.title  {
+    font-size: 5em;
 }
 
 form {
@@ -24,4 +84,8 @@ section {
 
 .film-section {
     padding: 1rem
+}
+/* class to add to elements to hide them  */
+.hide {
+    display: none;
 }
