--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,9 @@
 body, html {
     height: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
   }
 /* homepage styles */
 .homepage {
@@ -8,7 +12,6 @@ body, html {
     align-items: center;
     align-content: center;
     height: 100%;
-    width: auto;
     background-image: url("https://res.cloudinary.com/dcm18vy74/image/upload/v1652559610/Project1-Images/Stocksy_txpcd1dc0eemKP100_Medium_1292869_jxi1ai.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -56,12 +59,24 @@ button:hover {
 /* header */
 header {
     display: flex;
-    align-content: flex-end;
+   justify-content: center;
     height: 300px;
     background-image: url("https://res.cloudinary.com/dcm18vy74/image/upload/v1652559609/Project1-Images/GettyImages_1032865588_c3pry7.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.saved-recipes {
+    display: inline-block;
+    
+    padding-top: 80px;
+
+}
+
+li:hover {
+   color: rgb(173, 33, 14);
+   cursor: pointer;
 }
 
 .title  {
@@ -100,15 +115,12 @@ form {
 }
 
 .card:hover {
-
-    box-shadow: 0 0 20px rgba(2, 2, 2, 0.3); 
+    box-shadow: 0 0 20px rgba(2, 2, 2, 0.2); 
     cursor: pointer;
     position: relative;
     top:-5px;
     left:-5px;
     display:block;
-
-
 }
 
 .card-hearder-title {
