--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,7 +14,7 @@ button {
 }
 
 section {
-  margin: 10px;
+    margin: 10px;
 }
 
 #content {
@@ -23,5 +23,23 @@ section {
 }
 
 .film-section {
-    padding: 1rem
+    padding: 1rem;
+    transition: 0.4s;
+}
+
+.genre-buttons {
+    display: flex;
+    justify-content: center;
+    width: auto;
+    margin: .5rem 15rem;
+    flex-wrap: wrap;
+}
+
+.genre-buttons button {
+    margin: .5rem;
+    border-radius: 5px;
+    background-color: rgb(24, 255, 197);
+    padding: .25rem .4rem;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 900;
 }
