--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,7 @@ body, html {
 /* homepage styles */
 .homepage {
     display: flex;
+    margin: 0;
     justify-content: center;
     align-items: center;
     align-content: center;
@@ -178,6 +179,11 @@ text-align: center;
     color: rgb(173, 33, 14);
 }
 
+.homepage-hide {
+    display: none;
+    padding: 0;
+    margin: 0;
+}
 /* class to add to elements to hide them  */
 .hide {
     display: none;
