--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,7 +38,7 @@ body, html {
     display: flex;
     justify-content: center;
      height: 300px;
-     background-image: url("https://res.cloudinary.com/dcm18vy74/image/upload/v1652732062/Project1-Images/15625958_1293213694032209_8085771310300142218_o_ifwzwk.jpg");
+     background-image: url("https://res.cloudinary.com/dcm18vy74/image/upload/v1652889297/Project1-Images/Movie_Night_asdkk5.png");
      background-position: center;
      background-repeat: no-repeat;
      background-size: cover;
