--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -184,6 +184,20 @@ text-align: center;
     padding: 0;
     margin: 0;
 }
+
+.final-page {
+    display: flex;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 100%;
+    background-image: url("https://res.cloudinary.com/dcm18vy74/image/upload/v1652559610/Project1-Images/IMG_4417_o0znjm.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+}
 /* class to add to elements to hide them  */
 .hide {
     display: none;
