--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -216,6 +216,9 @@ text-align: center;
 .final-page-title {
     display: flex;
     justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 1.5em;
 }
 
 .final-page-subheader {
