--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -218,7 +218,11 @@ text-align: center;
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 1.5em;
+    font-size: 2em;
+    background-color: rgba(0,0,0,.5);
+    padding: 5px;
+    border-radius: 5px;
+
 }
 
 .final-page-subheader {
