--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,16 @@
+/* http://meyerweb.com/eric/tools/css/reset/     
+   v2.0 | 20110126    
+   License: none (public domain) */  
+   html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed,  figure, figcaption, footer, header, hgroup,  menu, nav, output, ruby, section, summary, time, mark, audio, video {  
+    margin: 0;  
+    padding: 0;  
+    border: 0;  
+    font-size: 100%;  
+    vertical-align: baseline; 
+}
+
 body, html {
     height: 100%;
-    margin: 0;
-    padding: 0;
     list-style: none;
     text-decoration: none;
   }
@@ -213,6 +222,12 @@ text-align: center;
     color: white;
 }
 
+.final-page-header {
+    display: inline-block;
+    align-items: center;
+    
+}
+
 .final-page-title {
     display: flex;
     justify-content: center;
@@ -229,6 +244,10 @@ text-align: center;
     justify-content: center;
 }
 
+.add-to-content {
+    margin:0;
+    padding: 0;
+}
 /* class to add to elements to hide them  */
 .hide {
     display: none;
