Saved recipe screen no longer shows the cocktail search button if saved recipes were accessed at this stage. Saved recipes now have a styled link to the recipes origin website. Modals have been styled. Prep time is now contextualized. Select and save buttons have been realigned. Cards now display as a column on mobile devices.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -354,10 +354,40 @@ justify-content: space-between;
     display: none;
 }
 
+.modal-card-body {
+    text-align: center;
+    font-size: 20px;
+}
+
+.modal-card-body img {
+    display: block;
+    width: 75%;
+    margin: auto;
+}
+
+.modal-card-body h3 {
+    display: inline-flex;
+    border-bottom: 2px solid black;
+    margin-top: 10px;
+}
+
+.modal-card-body a {
+    margin-top: 20px;
+}
+
+.modal-card-foot {
+    justify-content: flex-end;
+}
+
 @media (max-width: 480px) {
     .film-body p {
         display: none;
     }
+
+    #content {
+        display: flex !important;
+        flex-direction: column;
+    }    
 }
 
 @media (max-width: 768px) {
