--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -274,6 +274,14 @@ section {
 
 /* film section */
 
+.card.film-section {
+    margin-bottom: 3rem;
+}
+
+.film-section {
+    max-height: 100%;
+}
+
 .film-title {
   font-size: larger;
   font-weight: bolder;
@@ -283,6 +291,7 @@ section {
 
 .film-face {
   width: 100%;
+  height: 100%;
   background: radial-gradient(#111 50%, #000 100%);
   overflow: hidden;
   position: relative;
@@ -290,6 +299,7 @@ section {
 
 .film-face img {
   max-width: 100%;
+  height: 100%;
   display: block;
   transform: scale(1.3);
   transition: all 0.3s ease-out;
@@ -309,6 +319,8 @@ section {
   text-align: center;
   color: #fff;
   font-size: 18px;
+  max-height: 90%;
+  overflow: scroll;
 }
 
 .film-body h2 {
@@ -365,7 +377,6 @@ section {
   display: flex;
   justify-content: center;
   width: auto;
-  margin: 0.5rem 15rem;
   flex-wrap: wrap;
 }
 
@@ -499,6 +510,44 @@ section {
   .film-body p {
         display: none;
     }
+    .card.film-section {
+        margin-bottom: 1rem;
+        display: flex;
+        align-content: center;
+        flex-direction: column;
+    }
+    #film-phone-btn {
+        display: initial;
+        color: white;
+        background-color: rgb(173, 33, 14);
+        border-color: rgb(126, 23, 10);
+        display: inline-block;
+        text-decoration: none;
+        border-radius: 10px;
+        position: relative;
+        align-self: center;
+        z-index: 1;
+        width: fit-content;
+        padding: .5rem 1rem;
+        margin: 0.6rem 0rem;
+    }
+
+    #film-phone-info {
+        display: initial;
+    }
+
+    #film-phone-score {
+        display: initial;
+        margin: .5rem 0rem;
+        font-weight: bolder;
+        font-size: larger;
+        color: rgb(173, 33, 14);
+    }
+
+  .select-film {
+    display: none;
+  }
+
   #content {
         display: flex !important;
         flex-direction: column;
@@ -506,12 +555,6 @@ section {
 }
 
 @media (max-width: 768px) {
-  .film-body p {
-    display: none;
-  }
-}
-
-@media (max-width: 1024px) {
   .film-body p {
     display: none;
   }
