--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -233,8 +233,10 @@ section {
   padding: 10px 10px;
 }
 
-#content h3 {
-  font-size: 50px;
+#final-page-header {
+  font-size: 30px;
+  font-weight: bold;
+
 }
 
 /* recipe card styles */
@@ -573,8 +575,8 @@ section {
     flex-direction: column;
   }
 
-  #content h3 {
-    font-size: 20px;
+  #final-page-header {
+    font-size: 15px;
   }
 
   #final-wrap {
